# artifacts/api-server/src/routes/index.ts
@@ -11,6 +11,8 @@ import importRouter from "./import";
 import transactionsRouter from "./transactions";
 import ticketsRouter from "./tickets";
 import subscriptionDeliveryRouter from "./subscription-delivery";
+import fieldTasksRouter from "./fieldTasks";
+import salesPointsRouter from "./salesPoints";
 
 const router: IRouter = Router();
 
@@ -26,5 +28,7 @@ router.use(importRouter);
 router.use(transactionsRouter);
 router.use(ticketsRouter);
 router.use(subscriptionDeliveryRouter);
+router.use(fieldTasksRouter);
+router.use(salesPointsRouter);
 
 export default router;
